--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -25,8 +25,16 @@
     --fw-300: 300;
     --fw-600: 600;
     --fw-800: 800;
+    
+}
+html {
     font-size: 16px;
+}
 
+body {
+    color: var(--primary-text);
+    background-color: var(--primary-background);
+    font-size: var(--fz-14px);
 }
 .dark-mode {
     /* Dark Mode colors */
