--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -43,6 +43,16 @@ body {
     --primary-elements: hsl(209, 23%, 22%); /* Dark Blue */
 }
 
-header {
+header,
+.search-bar,
+.region-tab, 
+.region-list {
     background-color: var(--primary-elements);
+    border-radius: 0.3125rem;
+    box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
+}
+
+.material-symbols-outlined {
+    font-size: 16px;
+    font-weight: var(--fw-800);
 }
