--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,11 @@
     font-family: 'Nunito Sans', sans-serif;
 }
 
+.hide {
+    display: none;
+}
+
 .wrapper {
-    width: 100vw;
     min-height: 100vh;
     position: relative;
 }
@@ -45,16 +48,65 @@
     color: var(--primary-text);
     cursor: pointer;
 }
-.material-symbols-outlined {
-    font-size: 12px;
+/* ------- Search section ------ */
+.search-section {
+    margin-block-start: 6.5rem;
+    display: flex;
+    flex-direction: column;
+    padding-inline: 1rem;
+    row-gap: 2.5rem;
 }
+.region-tab,
+.search-bar {
+    height: 3rem;
+    display: flex;
+    align-items: center;
+}
+.search-bar > span {
+    padding-inline: 2rem;
+    cursor: pointer;
+}
+.search-term {
+    color: var(--primary-text);
+    font-family: Nunito Sans;
+    font-size: 0.75rem;
+    line-height: 1.25rem; /* 166.667% */
+    background: transparent;
+    outline: none;
+    border: 0;
+    flex: 1;
+}
+input::placeholder {
+    color: var(--primary-text);
+    opacity: 0.7;
+}
+.search-region-wrapper {
+    width: 12.5rem;
+}
+.region-tab {
+    padding-inline: 1.5rem;
+    margin-block-end: 0.25rem;
+    cursor: pointer;
+    /* display: flex; */
+    justify-content: space-between;
+    /* align-items: center; */
+} 
+
+.region-list {
+    position: absolute;
+    width: inherit;
+    padding-inline: 1.5rem;
+    padding-block: 1rem;
+    font-size: 0.75rem;
+    font-weight: 400;
+    line-height: 1.2rem; /* 133.333% */
+}
+
+
 
 
 /* -----for medium to large screen -------*/
 @media (width > 425px) {
-    body {
-        /* background: yellow; */
-    }
     .md-header {
         padding-inline: 5.5555%;
     }   
@@ -65,4 +117,16 @@
     .md-mode-btn {
         font-size: var(--fz-16px);
     }
+    
+    /* ---------search section ----------- */
+}
+@media (width > 768px) {
+    .search-section {
+        padding-inline: 5.5555%;
+        margin-block-start: 8rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    
 }
