--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -46,7 +46,8 @@ body {
 header,
 .search-bar,
 .region-tab, 
-.region-list {
+.region-list,
+.country-card {
     background-color: var(--primary-elements);
     border-radius: 0.3125rem;
     box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
@@ -55,4 +56,9 @@ header,
 .material-symbols-outlined {
     font-size: 16px;
     font-weight: var(--fw-800);
+}
+
+img {
+    width: 100%;
+    height: 100%;
 }
