Rendered country data from api for homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,7 @@ input::placeholder {
 }
 .search-region-wrapper {
     width: 12.5rem;
+    /* position: fixed; */
 }
 .region-tab {
     padding-inline: 1.5rem;
