--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -42,6 +42,7 @@ body {
     --primary-background: hsl(207, 26%, 17%); /*Very Dark Blue*/
     --primary-elements: hsl(209, 23%, 22%); /* Dark Blue */
 }
+
 .country-modal,
 header,
 .search-bar,
@@ -61,4 +62,7 @@ header,
 img {
     width: 100%;
     height: 100%;
+}
+h2 {
+    font-weight: var(--fw-800);
 }
