--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,6 +204,9 @@ input::placeholder {
     font-size: 0.875rem;
     font-weight: 300;
 }
+.border-countries {
+    display: flex;
+}
 
 
 /* -----for medium to large screen -------*/
